Fix wrapping

--- a/src/static/stylesheets/media_properties/common.module.scss
+++ b/src/static/stylesheets/media_properties/common.module.scss
@@ -195,6 +195,7 @@
 
   &__title {
     margin-bottom: 10px;
+    max-width: 100%;
     width: 100%;
   }
 
